Branch per SET UP

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<meta name="Keywords" content="">
-	<meta name="Description" content="">
-	<meta name="author" content="">
-	<meta name="format-detection" content="telephone=no">
-	<meta property="og:site_name" content=" オセアン大津ヤング">
-	<meta property="og:title" content="">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="">
-	<meta property="og:description" content="">
-	<title></title>
-	<link rel="canonical" href="">
-	<link rel="icon" href="img/favicon.ico">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <meta name="Keywords" content="">
+    <meta name="Description" content="">
+    <meta name="author" content="">
+    <meta name="format-detection" content="telephone=no">
+    <meta property="og:site_name" content=" オセアン大津ヤング">
+    <meta property="og:title" content="">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="">
+    <title></title>
+    <link rel="canonical" href="">
+    <link rel="icon" href="img/favicon.ico">
     <!--main css-->
     <link rel="stylesheet" href="public/css/common.css" />
     <!-- page css-->
@@ -24,6 +24,18 @@
 </head>
 
 <body>
+    <section class="hero"></section>
+    <!-- KAMOY FILL UNSA E NGALAN NINYO DIRI PERO NICE IF NGAN JD SA CONTENT IBUTANG EX. <CONCEPT>-->
+    <section class="concept">
+        <div class="concept__top"></div>
+        <div class="concept__center"></div>
+        <div class="concept__bottom"></div>
+    </section>
+    <section class="p-footer"></section>
+
+
+    <!-- MAIN JS-->
+    <script type="text/javascript" src="public/js/all.js"></script>
 
 </body>
 
