creating image folder & adding some images and add some intial codes

--- a/index.html
+++ b/index.html
@@ -24,15 +24,42 @@
 </head>
 
 <body>
-    <section class="hero"></section>
-    <!-- KAMOY FILL UNSA E NGALAN NINYO DIRI PERO NICE IF NGAN JD SA CONTENT IBUTANG EX. <CONCEPT>-->
-    <section class="concept">
-        <div class="concept__top"></div>
-        <div class="concept__center"></div>
-        <div class="concept__bottom"></div>
-    </section>
-    <section class="p-footer"></section>
+    <main>
 
+        <section class="hero"></section>
+        <!-- KAMOY FILL UNSA E NGALAN NINYO DIRI PERO NICE IF NGAN JD SA CONTENT IBUTANG EX. <CONCEPT>-->
+        <section class="concept">
+            <div class="con_stage">                
+                <div class="con_container">
+                    <div class="cont_content">
+                        <h2>CONCEPT</h2>
+                        <h4>創業昭和57年、近江牛焼肉の慶州がプロデュースする<br/>
+                            近江牛100%のグルメバーガーショップ</h4>
+                        <p>2021年、滋賀県草津市にオープンした、近江牛100%本格グルメバーガーショップ「COWSCROWN」。近江牛を知り尽くした、滋賀県で不動の人気を誇る焼肉店「慶州」のセカンドブランドです。</p>
+                        <p>つなぎを一切使わない近江牛100％のパティが当店の主役。地元のパン屋から特注した手作りバンズと、自家製ソースを組み合わせて、パティとの相性を徹底追求しました。溢れる上質な肉汁が口の中に広がる最高の贅沢を。肉好きのあなたのために、肉屋が本物のハンバーガーをご提供します。</p>
+                    </div>
+                </div>
+
+                <div class="con_burger">
+                    <img src="src/image/concept/con_burger.png" alt="">
+                </div>
+
+                <div class="con_pat_left">
+                    <img src="src/image/concept/con_pattern.png" alt="">
+                </div>
+
+                <div class="con_pat_right">
+                    <img src="src/image/concept/con_pattern.png" alt="">
+                </div>
+            </div>
+        </section>
+
+
+        
+        <section class="p-footer"></section>
+
+
+    </main>
 
     <!-- MAIN JS-->
     <script type="text/javascript" src="public/js/all.js"></script>
