Changes: hero background

--- a/index.html
+++ b/index.html
@@ -24,14 +24,109 @@
 </head>
 
 <body>
-    <section class="hero"></section>
-    <!-- KAMOY FILL UNSA E NGALAN NINYO DIRI PERO NICE IF NGAN JD SA CONTENT IBUTANG EX. <CONCEPT>-->
-    <section class="concept">
-        <div class="concept__top"></div>
-        <div class="concept__center"></div>
-        <div class="concept__bottom"></div>
-    </section>
-    <section class="p-footer"></section>
+    <main>
+        <section class="hero">
+            <div class="p-header">
+                <div class="p-header__nav">
+                    <ul class="p-header__ul">
+                        <li class="p-header__li">
+                            <a href="">
+                                <img src="public/img/navigation/nav_concept.svg" alt="concept">
+                            </a>
+                        </li>
+                        <li class="p-header__li">
+                            <a href="">
+                                <img src="public/img/navigation/nav_menu.svg" alt="menu">
+                            </a>
+                        </li>
+                        <li class="p-header__li">
+                            <a href="">
+                                <img src="public/img/navigation/nav_access.svg" alt="access">
+                            </a>
+                        </li>
+                        <li class="p-header__li">
+                            <a href="https://www.instagram.com/cowscrown_2021/" target="_blank">
+                                <img src="public/img/navigation/nav_insta.svg" alt="instagram">
+                                <img src="public/img/navigation/icon_insta.svg" class="icon" alt="instagram icon">
+                            </a>
+                        </li>
+                        <li class="p-header__li">
+                            <a href="https://www.facebook.com/COWSCROWN2021/" target="_blank">
+                                <img src="public/img/navigation/nav_fb.svg" alt="facebook">
+                                <img src="public/img/navigation/icon_fb.svg" class="icon" alt="facebook icon">
+                            </a>
+                        </li>
+                        <li class="p-header__li">
+                            <a href="">
+                                <img src="public/img/navigation/keishu_logo.svg" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="l-wrap">
+                <div class=" hero__inner">
+                    <div class="hero__top u-d-f">
+                        <div class="hero__logo ">
+                            <img src="public/img/common/hero_logo.png" alt="Cows Crown">
+                        </div>
+                    </div>
+                    <div class="hero__bottom">
+                        <div class="scroll">
+                            <a href="">
+                                <img src="public/img/common/hero_scroll.svg" alt="">
+                                <div class="line"></div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- KAMOY FILL UNSA E NGALAN NINYO DIRI PERO NICE IF NGAN JD SA CONTENT IBUTANG EX. <CONCEPT>-->
+
+        <section class="shop">
+            <img src="public/img/common/shop_img.png" alt="">
+        </section>
+        <section class="p-footer">
+            <div class="p-footer__ul u-d-f">
+                <li class="p-footer__li">
+                    <a href="">
+                        <img src="public/img/navigation/nav_concept.svg" alt="concept">
+                    </a>
+                </li>
+                <li class="p-footer__li">
+                    <a href="">
+                        <img src="public/img/navigation/nav_menu.svg" alt="menu">
+                    </a>
+                </li>
+                <li class="p-footer__li">
+                    <a href="">
+                        <img src="public/img/navigation/nav_access.svg" alt="access">
+                    </a>
+                </li>
+                <li class="p-footer__li">
+                    <a href="https://www.instagram.com/cowscrown_2021/" target="_blank">
+                        <img src="public/img/navigation/nav_insta.svg" alt="instagram">
+                        <img src="public/img/navigation/icon_insta.svg" class="icon" alt="instagram icon">
+                    </a>
+                </li>
+                <li class="p-footer__li">
+                    <a href="https://www.facebook.com/COWSCROWN2021/" target="_blank">
+                        <img src="public/img/navigation/nav_fb.svg" alt="facebook">
+                        <img src="public/img/navigation/icon_fb.svg" class="icon" alt="facebook icon">
+                    </a>
+                </li>
+                <li class="p-footer__li">
+                    <a href="">
+                        <img src="public/img/navigation/keishu_logo.svg" alt="">
+                    </a>
+                </li>
+            </div>
+            <div class="copyright">
+               <p> © 2021 COWSCROWN  Produced by <a href="http://jeengross.jp/" target="_blank">jeengross</a></p>
+            </div>
+        </section>
+    </main>
 
 
     <!-- MAIN JS-->
