Finish menu section

--- a/index.html
+++ b/index.html
@@ -24,14 +24,51 @@
 </head>
 
 <body>
-    <section class="hero"></section>
-    <!-- KAMOY FILL UNSA E NGALAN NINYO DIRI PERO NICE IF NGAN JD SA CONTENT IBUTANG EX. <CONCEPT>-->
-    <section class="concept">
-        <div class="concept__top"></div>
-        <div class="concept__center"></div>
-        <div class="concept__bottom"></div>
-    </section>
-    <section class="p-footer"></section>
+    <main>
+        <section class="hero"></section>
+        <!-- KAMOY FILL UNSA E NGALAN NINYO DIRI PERO NICE IF NGAN JD SA CONTENT IBUTANG EX. <CONCEPT>-->
+        <section class="concept">
+            <div class="concept__top"></div>
+            <div class="concept__center"></div>
+            <div class="concept__bottom"></div>
+        </section>
+        <section class="menu">
+            <div class="menu__top">
+                <div class="menu__top--title">
+                    <img src="./public/img/common/menu.svg" alt="">
+                </div>
+                <div class="menu__top--line">
+                    <img src="./public/img/common/line.svg" alt="">
+                </div>
+                <div class="menu__top--text">
+                    <p>食材にこだわったカウズクラウンのハンバーガー！
+                        メニューの一部をご紹介します。</p>
+                </div>
+                <div class="menu__top--button">
+                    <img src="./public/img/common/button.svg" alt="">
+                </div>
+            </div>
+            <div class="menu__bottom">
+                <div class="menu__bottom--container">
+                    <div class="menu__bottom--burger">
+                        <img class="burger_img" src="./public/img/common/takeout_img.png" alt="">
+                    </div>
+                    <div class="menu__bottom--content">
+                        <div class="takeout">
+                            <img src="./public/img/common/take_out.svg" alt="">
+                        </div>
+                        <div class="text">
+                            <p>全ての商品テイクアウトOK！
+                                お気軽にお申し付けください。
+                        （袋・容器代30円頂戴いたします。）</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+        <section class="p-footer"></section>
+
 
 
     <!-- MAIN JS-->
