Changes : add letterspacing on takeout section view_sp

--- a/index.html
+++ b/index.html
@@ -363,9 +363,7 @@
                         <div class="tk_content flex flex_center mg_auto relative">    
                             <div class="width_100">
                                 <img class="txt_center" src="public/img/takeout/tk_title.png" alt="Concept">              
-                                <p class="noto_r txt_center font_18">全ての商品テイクアウトOK！
-                                    お気軽にお申し付けください。
-                                    （袋・容器代30円頂戴いたします。）</p>
+                                <p class="noto_r txt_center font_18">全ての商品テイクアウトOK！お気軽にお申し付けください。（袋・容器代30円頂戴いたします。）</p>
                             </div>
                         </div>
                     </div>
