adding links, adding pdf file for the menus and making minor changes

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -66,7 +67,7 @@
                             </div>
 
                             <div class="nav_item">
-                                <a href="#" class="txt_white nav_logo">
+                                <a href="https://k-syu.com/" target="_blank" class="txt_white nav_logo">
                                     <div class="width_77 mg_right">
                                         <img src="public/img/common/nav_logo.svg" alt="">
                                     </div>
@@ -112,7 +113,7 @@
                         </div>
 
                         <div class="nav_item flex flex_center">
-                            <a href="#" class="txt_white nav_logo flex flex_center">
+                            <a href="https://k-syu.com/" target="_blank" class="txt_white nav_logo flex flex_center">
                                 <img src="public/img/common/nav_logo.svg" alt="">
                             </a>
                         </div>
@@ -156,7 +157,7 @@
                             </div>
     
                             <div class="nav_item flex flex_center">
-                                <a href="#" class="txt_white nav_logo flex flex_center">
+                                <a href="https://k-syu.com/" target="_blank" class="txt_white nav_logo flex flex_center">
                                     <img src="public/img/common/nav_logo.svg" alt="">
                                 </a>
                             </div>
@@ -310,7 +311,7 @@
                         <p class="noto_r txt_white font_18 txt_center">食材にこだわったカウズクラウンのハンバーガー！
                             メニューの一部をご紹介します。</p>
                         
-                        <a href="#" class="menu_btn">
+                        <a href="public/pdf/cowscrown_menu.pdf" target="_blank" class="menu_btn">
                             <div class="m_btn relative mg_auto flex flex_center">
                                 <div class="width_2"></div>
                                 <div class="width_10">
@@ -362,9 +363,7 @@
                         <div class="tk_content flex flex_center mg_auto relative">    
                             <div class="width_100">
                                 <img class="txt_center" src="public/img/takeout/tk_title.png" alt="Concept">              
-                                <p class="noto_r txt_center font_18">全ての商品テイクアウトOK！
-                                    お気軽にお申し付けください。
-                                    （袋・容器代30円頂戴いたします。）</p>
+                                <p class="noto_r txt_center font_18">全ての商品テイクアウトOK！お気軽にお申し付けください。（袋・容器代30円頂戴いたします。）</p>
                             </div>
                         </div>
                     </div>
@@ -505,7 +504,7 @@
                     </div>
 
                     <div class="ft_col flex flex_center">
-                        <a href="#" class="flex flex_center">
+                        <a href="https://k-syu.com/" target="_blank" class="flex flex_center">
                             <img src="public/img/common/foot_logo.png" alt="" class="txt_logo">
                         </a>
                     </div>
@@ -554,7 +553,7 @@
                     </div>
 
                     <div class="ft_col flex flex_center">
-                        <a href="#" class="flex flex_center">
+                        <a href="https://k-syu.com/" target="_blank" class="flex flex_center">
                             <img src="public/img/common/foot_logo.png" alt="" class="txt_logo">
                         </a>
                     </div>
@@ -606,7 +605,7 @@
                     </div>
 
                     <div class="ft_item_2 flex flex_center">
-                        <a href="#" class="flex flex_center">
+                        <a href="https://k-syu.com/" target="_blank" class="flex flex_center">
                             <img src="public/img/common/foot_logo.svg" alt="" class="ft_logo">
                         </a>
                     </div>
