making minor changes

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
         <!-- HERO SECTION -->
         <section class="hero">                
             <div class="l-wrap">
-                <div class=" hero__inner relative">
+                <div class="hero__inner relative">
                     <div class="hero__top u-d-f">
-                        <h1 class="hero__logo">
-                            <img src="public/img/common/hero_logo.png" alt="Cows Crown">
+                        <h1 class="hero__logo txt_center">
+                            <img src="public/img/common/hero_logo.png" alt="Cows Crown" class="mg_auto">
                         </h1>
                     </div>
 
